Fixed css var, added letter spacing, touching theme colors

--- a/assets/css/general/general.css
+++ b/assets/css/general/general.css
@@ -23,6 +23,10 @@ a:hover {
   transition: box-shadow 0.25s linear;
 }
 
+.transition-border-color {
+  transition: border-color 0.25s linear;
+}
+
 /* Fonts */
 
 /* @font-face {
